# ammonia

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  justfile
ammonia/: Cargo.toml
ammoniac/: Cargo.toml
src/: board.rs  chess.rs  color.rs  game.rs  main.c  main.rs  movegen.rs  piece.rs
src/board/: bitboard.c  bitboard.h  bitboard.rs  defs.rs
src/chess/: nrof.rs  piece.rs
src/game/: defs.rs  game_move.rs  history.rs  movegen.rs
src/movegen/: attack_tables.rs
tests/: test_bitboard_invalid.c  test_bitboard_valid.c
