[workspace]
resolver = "3"
members = ["ammoniac","library/ammonia_core", "library/ammonia_defs", "library/ammonia_error_macros", "library/ammonia_errors", "library/ammonia_lexer", "library/ammonia_parser"]

[workspace.dependencies]
ammonia_error_macros = { path = "library/ammonia_error_macros" }
ammonia_errors = { path = "library/ammonia_errors" }
ammonia_lexer = { path = "library/ammonia_lexer" }
ammonia_defs = { path = "library/ammonia_defs" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
